kubernetes/apps/gonic/gonic/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gonic
  namespace: gonic
  labels:
    app: gonic
spec:
  type: ClusterIP
  selector:
    app: gonic
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
