kubernetes/apps/gonic/gonic/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gonic
  namespace: gonic
spec:
  hostnames:
    - gonic.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gonic
          namespace: gonic
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
